<resources>
    <string name="app_name">MyStoryApp</string>
    <string name="login_desc">Login now to tell your coding story with dicoding!</string>
    <string name="register_desc">Register now to tell your experience with dicoding!</string>
    <string name="input_email">Your Email:</string>
    <string name="input_password">Your Password:</string>
    <string name="input_name">Your Name:</string>
    <string name="person_icon">This is a user symbol</string>
    <string name="loading_desc">The app is loading</string>
    <string name="story_list_desc">This is the story list</string>
    <string name="btn_camera_desc">Press this button to open the camera.</string>
    <string name="btn_gallery_desc">Press this button to open the gallery.</string>
    <string name="edt_desc_desc">Fill your description in this field.</string>
    <string name="btn_upload_desc">Press this button to upload your story.</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="story_desc">This is a story picture</string>
    <string name="preview_desc">A preview of your photo</string>
    <string name="btn_reg_desc">Press this button to register after filling your data.</string>
    <string name="btn_log_desc">Press this button to login after filling your data.</string>
    <string name="edt_email_desc">Fill your email here.</string>
    <string name="edt_password_desc">Fill your password here.</string>
    <string name="edt_name_desc">Fill your name here.</string>
    <string name="desc_hint">Give your photo a description!</string>
    <string name="take_photo">Camera</string>
    <string name="gallery_photo">Gallery</string>
    <string name="upload">Upload</string>
    <string name="password_error">Your password has to be at least 6 characters</string>
    <string name="email_error">Wrong email format</string>
    <string name="empty_error">This part has to be filled</string>
    <string name="register_to_login">Already have an account? Login here!</string>
    <string name="login_to_register">Have yet to make an account? Register here!</string>
    <string name="photo_fail">Photo capture failed.</string>
    <string name="front_image">This is the front image.</string>
    <string name="choose_img">Choose an image.</string>
    <string name="exit">Do you want to exit the app?</string>
    <string name="exit_message">Click yes to exit!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="camera_fail">Camera failed.</string>
    <string name="take_photo_desc">Press this button to take your picture.</string>
    <string name="switch_camera_desc">Press this button to switch your camera.</string>
    <string name="no_permission_camera">App permission to access the camera is rejected.</string>
    <string name="no_permission_location">App permission to access your location is rejected.</string>
    <string name="no_file_yet">Please insert a file first.</string>
    <string name="add_button_desc">Press this button to add your story</string>
    <string name="logout_button">Log out</string>
    <string name="language_button">Change language</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="not_filled_yet">Please fill the fields above</string>
    <string name="empty_widget">NO DATA</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">STORY BANNER</string>
    <string name="map_button">Stories around you.</string>
    <string name="title_activity_maps">Story Map</string>
    <string name="curr_location">You are here</string>
    <string name="GPS_off">Turn on your location to use maps</string>
    <string name="no_location">No location yet</string>
    <string name="time">Time</string>
    <string name="place">Place</string>
    <string name="retry">Retry</string>
</resources>