<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.register.RegisterActivity">

        <ProgressBar
            android:id="@+id/pb_loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/loading_desc"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/register_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/person_icon"
            android:src="@drawable/story_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_register_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:text="@string/register_desc"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_image" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/input_name"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/tv_register_desc"
            app:layout_constraintStart_toStartOf="@+id/tv_register_desc"
            app:layout_constraintTop_toBottomOf="@+id/tv_register_desc" />


        <com.example.mystoryapp.ui.customview.CustomEditText
            android:id="@+id/ed_register_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/edt_name_desc"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/tv_name"
            app:layout_constraintStart_toStartOf="@+id/tv_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/input_email"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/ed_register_name"
            app:layout_constraintStart_toStartOf="@+id/ed_register_name"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_name" />


        <com.example.mystoryapp.ui.customview.CustomEditText
            android:id="@+id/ed_register_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/edt_email_desc"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/tv_email"
            app:layout_constraintStart_toStartOf="@+id/tv_email"
            app:layout_constraintTop_toBottomOf="@+id/tv_email" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/input_password"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/ed_register_email"
            app:layout_constraintStart_toStartOf="@+id/ed_register_email"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_email" />


        <com.example.mystoryapp.ui.customview.CustomEditText
            android:id="@+id/ed_register_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/edt_password_desc"
            android:gravity="start"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/tv_password"
            app:layout_constraintStart_toStartOf="@+id/tv_password"
            app:layout_constraintTop_toBottomOf="@+id/tv_password" />

        <com.example.mystoryapp.ui.customview.CustomRegisterButton
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/btn_reg_desc"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="@+id/ed_register_password"
            app:layout_constraintStart_toStartOf="@+id/ed_register_password"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_password" />

        <com.example.mystoryapp.ui.customview.CustomButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:enabled="true"
            android:text="@string/register_to_login"
            app:layout_constraintEnd_toEndOf="@+id/btn_register"
            app:layout_constraintStart_toStartOf="@+id/btn_register"
            app:layout_constraintTop_toBottomOf="@+id/btn_register" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
