<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.LoginActivity">

    <ProgressBar
        android:id="@+id/pb_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/sign_in_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:src="@drawable/person_24"
        android:contentDescription="@string/person_icon"/>

    <TextView
        android:id="@+id/tv_login_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:text="@string/login_desc"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_image" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/input_email"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_desc"
        app:layout_constraintStart_toStartOf="@+id/tv_login_desc"
        app:layout_constraintEnd_toEndOf="@id/tv_login_desc"/>


    <com.example.mystoryapp.ui.customview.CustomEditText
        android:id="@+id/ed_login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        app:layout_constraintStart_toStartOf="@+id/tv_email"
        app:layout_constraintEnd_toEndOf="@+id/tv_email"/>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/input_password"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_email"
        app:layout_constraintStart_toStartOf="@+id/ed_login_email"
        app:layout_constraintEnd_toEndOf="@id/ed_login_email"/>


    <com.example.mystoryapp.ui.customview.CustomEditText
        android:id="@+id/ed_login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:gravity="start"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        app:layout_constraintStart_toStartOf="@+id/tv_password"
        app:layout_constraintEnd_toEndOf="@+id/tv_password"/>

    <com.example.mystoryapp.ui.customview.CustomLoginButton
        android:enabled="false"
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_password"
        app:layout_constraintStart_toStartOf="@+id/ed_login_password"
        app:layout_constraintEnd_toEndOf="@+id/ed_login_password"/>

    <com.example.mystoryapp.ui.customview.CustomButton
        android:enabled="true"
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_to_register"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"/>
</androidx.constraintlayout.widget.ConstraintLayout>